@@ -3,10 +3,6 @@ package by.beatdev.userservice.exception;
 import by.beatdev.userservice.exception.response.ErrorResponse;
 import by.beatdev.userservice.exception.response.ErrorResponseUtils;
 import by.beatdev.userservice.exception.response.StructuredErrorResponse;
-import jakarta.persistence.EntityNotFoundException;
-import jakarta.persistence.OptimisticLockException;
-import jakarta.validation.ConstraintViolation;
-import jakarta.validation.ConstraintViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.http.converter.HttpMessageNotReadableException;
@@ -16,7 +12,10 @@ import org.springframework.web.bind.MissingPathVariableException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
-import java.sql.SQLException;
+import javax.persistence.EntityNotFoundException;
+import javax.validation.ConstraintViolation;
+import javax.validation.ConstraintViolationException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -41,32 +40,27 @@ public class GlobalExceptionHandler {
     public ResponseEntity<List<ErrorResponse>> handleMissingPathVariableException(MissingPathVariableException ex) {
         String message = ex.getVariableName() + " variable is missing";
         ErrorResponse errorResponse = new ErrorResponse(message);
-        return ResponseEntity.badRequest().body(List.of(errorResponse));
+        return ResponseEntity.badRequest().body(Collections.singletonList(errorResponse));
     }
 
     @ExceptionHandler(HttpMessageNotReadableException.class)
     public ResponseEntity<List<ErrorResponse>> handleHttpMessageNotReadable() {
         String message = "incorrect input";
         ErrorResponse errorResponse = new ErrorResponse(message);
-        return ResponseEntity.badRequest().body(List.of(errorResponse));
+        return ResponseEntity.badRequest().body(Collections.singletonList(errorResponse));
     }
 
-    @ExceptionHandler({OptimisticLockException.class, SQLException.class})
-    public ResponseEntity<List<ErrorResponse>> handleGeneralServiceException(RuntimeException ex) {
-        ErrorResponse errorResponse = new ErrorResponse(ex.getMessage());
-        return ResponseEntity.badRequest().body(List.of(errorResponse));
-    }
 
     @ExceptionHandler(EntityNotFoundException.class)
     public ResponseEntity<List<ErrorResponse>> handleAuthException(EntityNotFoundException ex) {
         ErrorResponse errorResponse = new ErrorResponse(ex.getMessage());
-        return ResponseEntity.badRequest().body(List.of(errorResponse));
+        return ResponseEntity.badRequest().body(Collections.singletonList(errorResponse));
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<List<ErrorResponse>> handleException(Exception ex) {
         String message = "server was unable to process the request correctly, please contact the administrator";
         ErrorResponse errorResponse = new ErrorResponse(message);
-        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(List.of(errorResponse));
+        return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(Collections.singletonList(errorResponse));
     }
 }
